--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^9.0.2",
     "jasmine-core": "~4.5.0",
     "json-server": "^0.17.3",
     "karma": "~6.4.0",
