--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
@@ -24,6 +25,7 @@
     "@ng-select/ng-select": "^10.0.4",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.5",
+    "firebase": "^9.16.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
